--- a/index.html
+++ b/index.html
@@ -12,29 +12,53 @@
   <title>Frontend Mentor | Results summary component</title>
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
+  <main>
+    <article>
+      <section class="results">
+        <h1>Your Result</h1>
+        <div class="score">
+          <h2>76</h2>
+          <p>of 100</p>
+        </div>
+        <h2>Great</h2>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
+      </section>
+      <section class="summary">
+        <h2>summary</h2>
+        <ul>
+          <li>
+            <div>
+              <picture class="icon"></picture>
+              <h3>Reaction</h3>
+            </div>
+            <div class="score">80 / 100</div>
+          </li>
+          <li>
+            <div>
+              <picture class="icon"></picture>
+              <h3>Memory</h3>
+            </div>
+            <div class="score">92 / 100</div>
+          </li>
+          <li>
+            <div>
+              <picture class="icon"></picture>
+              <h3>Verbal</h3>
+            </div>
+            <div class="score">61 / 100</div>
+          </li>
+          <li>
+            <div>
+              <picture class="icon"></picture>
+              <h3>Visual</h3>
+            </div>
+            <div class="score">72 / 100</div>
+          </li>
+        </ul>
+        <button>Continue</button>
+      </section>
+    </article>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
