--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <article>
       <section class="results">
         <h1>Your Result</h1>
-        <div class="score">
+        <div class="mainscore">
           <h2>76</h2>
           <p>of 100</p>
         </div>
-        <h2>Great</h2>
+        <h2 id="a">Great</h2>
         <p>You scored higher than 65% of the people who have taken these tests.</p>
       </section>
       <section class="summary">
