--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
         <ul>
           <li>
             <div>
-              <picture class="icon"></picture>
+              <picture class="icon"><img src="./assets/images/icon-reaction.svg" alt="icon"></picture>
               <h3>Reaction</h3>
             </div>
             <div class="score">80 / 100</div>
           </li>
           <li>
             <div>
-              <picture class="icon"></picture>
+              <picture class="icon"><img src="./assets/images/icon-memory.svg" alt="icon"></picture>
               <h3>Memory</h3>
             </div>
             <div class="score">92 / 100</div>
           </li>
           <li>
             <div>
-              <picture class="icon"></picture>
+              <picture class="icon"><img src="./assets/images/icon-verbal.svg" alt="icon"></picture>
               <h3>Verbal</h3>
             </div>
             <div class="score">61 / 100</div>
           </li>
           <li>
             <div>
-              <picture class="icon"></picture>
+              <picture class="icon"><img src="./assets/images/icon-visual.svg" alt="icon"></picture>
               <h3>Visual</h3>
             </div>
             <div class="score">72 / 100</div>
