--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
               <picture class="icon"><img src="./assets/images/icon-reaction.svg" alt="icon"></picture>
               <h3>Reaction</h3>
             </div>
-            <div class="score">80 / 100</div>
+            <div class="score"><p>80 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-memory.svg" alt="icon"></picture>
               <h3>Memory</h3>
             </div>
-            <div class="score">92 / 100</div>
+            <div class="score"><p>92 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-verbal.svg" alt="icon"></picture>
               <h3>Verbal</h3>
             </div>
-            <div class="score">61 / 100</div>
+            <div class="score"><p>61 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-visual.svg" alt="icon"></picture>
               <h3>Visual</h3>
             </div>
-            <div class="score">72 / 100</div>
+            <div class="score"><p>72 <span>/ 100</span></p></div>
           </li>
         </ul>
         <button>Continue</button>
