--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-reaction.svg" alt="icon"></picture>
-              <h3>Reaction</h3>
+              <h3><span>Reaction</span></h3>
             </div>
             <div class="score"><p>80 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-memory.svg" alt="icon"></picture>
-              <h3>Memory</h3>
+              <h3><span>Memory</span></h3>
             </div>
             <div class="score"><p>92 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-verbal.svg" alt="icon"></picture>
-              <h3>Verbal</h3>
+              <h3><span>Verbal</span></h3>
             </div>
             <div class="score"><p>61 <span>/ 100</span></p></div>
           </li>
           <li>
             <div>
               <picture class="icon"><img src="./assets/images/icon-visual.svg" alt="icon"></picture>
-              <h3>Visual</h3>
+              <h3><span>Visual</span></h3>
             </div>
             <div class="score"><p>72 <span>/ 100</span></p></div>
           </li>
         </ul>
-        <button>Continue</button>
+        <button class="continue">Continue</button>
       </section>
     </article>
   </main>
